objects/Charger__c.object
<CustomObject>
    <description>This is the actual charge controller unit that regulates voltage and amperage, commonly inside the station, but independent on wall mounts.</description>
    <fields>
        <fullName>Allowed_current_setting__c</fullName>
        <description>&quot;Allowed Current Setting&quot; - This is the max setting the charger can be at in the Juicenet platform.
Named from JuiceNet Platform, however is just as applicable to other amperage settings on other platforms.</description>
        <inlineHelpText>&quot;Allowed Current Setting&quot; - This is the max setting the charger can be at in the Juicenet platform.
Named from JuiceNet Platform, however is just as applicable to other amperage settings on other platforms.</inlineHelpText>
        <label>Allowed Current Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Level__c</fullName>
        <label>Charge Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cord_Manufacturer__c</fullName>
        <label>Cord Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delphi (Clipper Creek)</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>ITT</fullName>
                </value>
                <value>
                    <fullName>GreatLink</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cord_Serial__c</fullName>
        <label>Cord Serial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cord_Type__c</fullName>
        <label>Cord Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clipper Creek Gen 1 (White)</fullName>
                </value>
                <value>
                    <fullName>Clipper Creek Gen 2 (Black)</fullName>
                </value>
                <value>
                    <fullName>ITT</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>Tesla HPWC</fullName>
                </value>
                <value>
                    <fullName>Greatlink</fullName>
                </value>
                <value>
                    <fullName>ABB CHAdeMO &amp; CCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Setting_Notes__c</fullName>
        <description>Record why the Allowed Current Setting is the way it is.</description>
        <inlineHelpText>Record why the Allowed Current Setting is the way it is.</inlineHelpText>
        <label>Current Setting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Firmware_Level__c</fullName>
        <label>Firmware Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10.0.2</fullName>
                </value>
                <value>
                    <fullName>10.10.00</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JuiceNet_Base_URL__c</fullName>
        <defaultValue>&quot;https://dashboard.emotorwerks.com/Portal/Details?unitID=&quot;</defaultValue>
        <label>JuiceNet Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JuiceNet_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JuiceNet Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JuiceNet_ID__c</fullName>
        <label>JuiceNet ID</label>
        <length>28</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JuiceNet_Link__c</fullName>
        <formula>HYPERLINK(JuiceNet_Base_URL__c &amp; JuiceNet_ID__c, JuiceNet_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JuiceNet Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where is this component housed or installed?</description>
        <inlineHelpText>Where is this component housed or installed?</inlineHelpText>
        <label>Location</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>Chargers</relationshipLabel>
        <relationshipName>Chargers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clipper Creek</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Eaton</fullName>
                </value>
                <value>
                    <fullName>EMW</fullName>
                </value>
                <value>
                    <fullName>ABB</fullName>
                </value>
                <value>
                    <fullName>Bosch</fullName>
                </value>
                <value>
                    <fullName>EVBox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>Chargers</relationshipLabel>
        <relationshipName>Chargers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Charger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JuiceNet_Link__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Cord_Serial__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Production_Build__c</columns>
        <columns>Cord_Manufacturer__c</columns>
        <columns>JuiceNet_Enabled__c</columns>
        <columns>JuiceNet_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charger Serial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chargers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>